fix pour la version firefox

--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -192,7 +192,7 @@ body {
   margin: auto;
   width: 94%;
   height: 70px;
-  justify-content: right;
+  justify-content: left;
   background-color: #f6f6f6;
   text-decoration: none;
   border-radius: 20px;
@@ -218,6 +218,8 @@ body {
 .conteneur-fonctionnement_card_text {
   font-size: 1em;
   color: black;
+  display: flex;
+  justify-content: left;
 }
 
 .circle-purple {
