--- a/assets/style/sass/_ohmyfood.scss
+++ b/assets/style/sass/_ohmyfood.scss
@@ -93,7 +93,7 @@
   margin: auto;
   width: 94%;
   height: 70px;
-  justify-content: right;
+  justify-content: left;
   background-color: $grey;
   text-decoration: none;
   border-radius: 20px;
@@ -119,6 +119,8 @@
 .conteneur-fonctionnement_card_text {
   font-size: 1em;
   color: black;
+  display: flex;
+  justify-content: left;
 }
 
 .circle-purple {
